--- a/ConcertRewind/ConcertRewind.csproj
+++ b/ConcertRewind/ConcertRewind.csproj
@@ -229,6 +229,13 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Views\Home\music1.jpg" />
+    <Content Include="Views\Home\music2.jpg" />
+    <Content Include="Views\Home\music3.jpg" />
+    <Content Include="Views\Home\music5.jpg" />
+    <Content Include="Views\Home\music6.jpg" />
+    <Content Include="Views\Home\music7.jpg" />
+    <Content Include="Views\Home\music8.jpg" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
