--- a/ConcertRewind/ConcertRewind.csproj
+++ b/ConcertRewind/ConcertRewind.csproj
@@ -251,6 +251,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Home\Results.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
