Edits to Home Page

--- a/ConcertRewind/ConcertRewind.csproj
+++ b/ConcertRewind/ConcertRewind.csproj
@@ -256,6 +256,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Setlist\Results.cshtml" />
+    <Content Include="Views\Setlist\Concert.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
