added a test view for google maps venue location

--- a/ConcertRewind/ConcertRewind.csproj
+++ b/ConcertRewind/ConcertRewind.csproj
@@ -307,6 +307,7 @@
     <Content Include="Views\ConcertDBs\Details.cshtml" />
     <Content Include="Views\ConcertDBs\Edit.cshtml" />
     <Content Include="Views\ConcertDBs\Index.cshtml" />
+    <Content Include="Views\Home\Test.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
