--- a/ConcertRewind/ConcertRewind.csproj
+++ b/ConcertRewind/ConcertRewind.csproj
@@ -200,6 +200,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\APIKeys.cs" />
     <Compile Include="Models\concert.cs" />
     <Compile Include="Models\ConcertDB.cs">
       <DependentUpon>Model1.tt</DependentUpon>
