added azure sql access and connection strings

--- a/ConcertRewind/Web.config
+++ b/ConcertRewind/Web.config
@@ -75,6 +75,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ConcertDBEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-KSSAADL\SQLEXPRESS;initial catalog=ConcertDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="ConcertDBEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-KSSAADL\SQLEXPRESS;initial catalog=ConcertDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="ConcertDBEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=concertrewind.database.windows.net;initial catalog=ConcertDB;persist security info=True;user id=gccrapp;password=apisarehard!1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
