Moved DB connection string to separate (untracked) config file.

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,7 @@ _[Ss]cripts
 # APIKeys class file #
 ######################
 APIKeys.cs
+#####################################
+# Database connection settings file #
+#####################################
+DBConnection.config
